@@ -29,5 +29,8 @@
 
 size_t tool_write_cb(void *buffer, size_t sz, size_t nmemb, void *userdata);
 
+/* create a local file for writing, return TRUE on success */
+bool tool_create_output_file(struct OutStruct *outs);
+
 #endif /* HEADER_CURL_TOOL_CB_WRT_H */
 
