@@ -1388,6 +1388,13 @@ static CURLcode operate_do(struct GlobalConfig *global,
 #endif
           result = curl_easy_perform(curl);
 
+          if(!result && !outs.stream && !outs.bytes
+              /* we have received no data despite the transfer was successful
+                 ==> force cration of an empty output file (if an output file
+                 was specified) */
+              && !tool_create_output_file(&outs))
+            result = CURLE_WRITE_ERROR;
+
           if(outs.is_cd_filename && outs.stream && !global->mute &&
              outs.filename)
             printf("curl: Saved to filename '%s'\n", outs.filename);
